--- a/Planner/css/giriscss.css
+++ b/Planner/css/giriscss.css
@@ -5,7 +5,7 @@
     color: whitesmoke;
 }
 body{
-    background-color: #363945;
+    background-color: #110934;
 }
 .welcoming-paragraph{
     display: flex;
@@ -16,7 +16,7 @@ body{
     transition: all .3s;
 }
 .welcoming-paragraph p{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Inter', sans-serif;
     
 }
 .welcoming-paragraph .merhaba{
@@ -40,48 +40,93 @@ body{
     border-radius: 10px;
     border: none;
     font-size: 1.5rem;
-    transition: all .3s;
+    transition: all .5s;
 }
 .buttons .kayit{
-    background-color: #0072B5;
+    background-color: #A72002;
     color: white;
-    border: 1px solid #0072B5;
+    border: 1px solid #A72002;
 }
 .buttons .giris{
     background-color: transparent;
-    color: #0072B5
+    color: #A72002
 }
 .buttons .kayit:hover{
     background-color: white;
-    color: #0072B5;
+    color: #A72002;
 }
 .buttons .giris:hover{
     color:white;
 }
-.register-login{
+.register-login-screen{
     position: absolute;
-    top:0px;
-    left:0px;
+    top: 0px;
+    left: 0px;
     width: 100vw;
-    height:100vh;
-    background-color: #00000060;
+    height: 100vh;
+    background-color: #0a062094;
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
 }
-.register-login .register{
+.register-login-screen .register-screen{
     display: flex;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    padding-left: 75px;
+    padding-right: 75px ;
+    background-color: #0e072b;
+    border: 2px solid #7c1700;
     flex-direction: column;
-    background-color: gray;
-    border: 2px solid #0072B5;
-    padding: 50px;
+    font-family: 'Inter', sans-serif;
+    border-radius: 30px;
+    display: none;
 }
-.register-login .register input{
-    margin-bottom: 30px;
-    padding: 10px;
-    border-radius: 60px;
-    color: black;
+
+.register-login-screen .register-screen .input-box{
+    display: flex;
+    border: 2px solid #7c1700;
+    background-color: #A72002;
+    border-radius: 30px;
+    padding:10px;
 }
-.kapali{
-    display: none !important;
+
+.register-login-screen .register-screen input{
+    padding: 1px;
+    color: whitesmoke;
+    background-color: transparent;
+    border-color: transparent;
+    font-size: 20px;
+    outline: none;
+}
+.register-login-screen .register-screen label{
+    font-size: 20px;
+}
+.register-login-screen .register-screen .label-input-box{
+    padding-bottom: 30px;
+}
+.register-login-screen .register-screen p {
+    text-align: center;
+    font-size: 80px;
+    padding-bottom:50px;
+    font-weight: 900px;
+    text-decoration: underline;
+}
+.register-login-screen .register-screen .register-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.register-login-screen .register-screen button{
+    background-color: #A72002;
+    border: 1px solid #7c1700;
+    height: 40px;
+    width: 150px;
+    border-radius: 20px;
+}
+.register-login-screen .register-screen button:hover{
+    background-color: white;
+    color: #A72002;
+    transition: all .5s;
 }
