--- a/Planner/giris-ekrani/css/giriscss.css
+++ b/Planner/giris-ekrani/css/giriscss.css
@@ -5,7 +5,9 @@
     color: whitesmoke;
 }
 body{
-    background-color: #110934;
+    
+    background-image: url("https://images.hdqwalls.com/wallpapers/purple-nebula-haze-stars-4k-r6.jpg");
+    background-size: cover;
 }
 .welcoming-paragraph{
     display: flex;
@@ -14,6 +16,15 @@ body{
     justify-content: center;
     height: 100vh;
     transition: all .3s;
+    background-color: #a0005d09;
+}
+.welcoming-paragraph .top-part{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 80%;
+    width: 100%;
 }
 .welcoming-paragraph p{
     font-family: 'Inter', sans-serif;
@@ -31,32 +42,37 @@ body{
 .buttons{
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 30px;
+    width: 100%;
+    height: 30%;
+
 }
 .buttons button{
     color:black;
     padding: 10px 20px;
-    margin-top: 200px;
     border-radius: 10px;
     border: none;
     font-size: 1.5rem;
     transition: all .5s;
 }
 .buttons .kayit{
-    background-color: #A72002;
+    background-color: #1d000d;
     color: white;
-    border: 1px solid #A72002;
+    border: 1px solid #1a0020;
 }
 .buttons .giris{
-    background-color: transparent;
-    color: #A72002
+    background-color: #1d000d;
+    color: white;
+    border: 1px solid #1a0020;
 }
 .buttons .kayit:hover{
     background-color: white;
-    color: #A72002;
+    color: #1d000d;
 }
 .buttons .giris:hover{
-    color:white;
+    background-color: white;
+    color: #1d000d;
 }
 
 /* Kayit Olma Ekranı*/
@@ -78,8 +94,8 @@ body{
     padding-bottom: 75px;
     padding-left: 75px;
     padding-right: 75px ;
-    background-color: #0e072b;
-    border: 2px solid #7c1700;
+    background-color: #1d000d;
+    border: 2px solid #38001a;
     flex-direction: column;
     font-family: 'Inter', sans-serif;
     border-radius: 30px;
@@ -88,8 +104,8 @@ body{
 
 .register-login-screen .register-screen .input-box{
     display: flex;
-    border: 2px solid #7c1700;
-    background-color: #A72002;
+    border: 2px solid #1d000d;
+    background-color: #1a0020;
     border-radius: 30px;
     padding:10px;
 }
@@ -121,15 +137,15 @@ body{
     align-items: center;
 }
 .register-login-screen .register-screen button{
-    background-color: #A72002;
-    border: 1px solid #7c1700;
+    background-color: #1a0020;
+    border: 1px solid #1d000d;
     height: 40px;
     width: 150px;
     border-radius: 20px;
 }
 .register-login-screen .register-screen button:hover{
     background-color: white;
-    color: #A72002;
+    color: #1a0020;
     transition: all .5s;
 }
 
@@ -141,8 +157,8 @@ body{
     padding-bottom: 75px;
     padding-left: 75px;
     padding-right: 75px ;
-    background-color: #0e072b;
-    border: 2px solid #7c1700;
+    background-color: #1d000d;
+    border: 2px solid #38001a;
     flex-direction: column;
     font-family: 'Inter', sans-serif;
     border-radius: 30px;
@@ -163,8 +179,8 @@ body{
 }
 .register-login-screen .login-screen .input-box{
     display: flex;
-    border: 2px solid #7c1700;
-    background-color: #A72002;
+    border: 2px solid #1d000d;
+    background-color: #1a0020;
     border-radius: 30px;
     padding:10px;
 }
@@ -182,13 +198,13 @@ body{
     align-items: center;
 }
 .register-login-screen .login-screen button{
-    background-color: #A72002;
-    border: 1px solid #7c1700;
+    background-color: #1a0020;
+    border: 1px solid #1d000d;
     height: 40px;
     width: 150px;
     border-radius: 20px;
 }.register-login-screen .login-screen button:hover{
     background-color: white;
-    color: #A72002;
+    color: #1a0020;
     transition: all .5s;
 }
