--- a/Planner/ana-ekran/css/ana-sayfa-basligi.css
+++ b/Planner/ana-ekran/css/ana-sayfa-basligi.css
@@ -21,6 +21,7 @@ body{
   align-items: center;
   flex-direction: column;
   color: white;
+  display: none;
 }
 
 .ana-sayfa-heading-box .heading-box{
