--- a/Planner/ana-ekran/css/hedeflerim.css
+++ b/Planner/ana-ekran/css/hedeflerim.css
@@ -1,116 +1,199 @@
-.goals-background-form{
-    border: 2px solid red;
+.goals-main-box{
     display: flex;
-    position: absolute;
-    top:0px;
-    left: 0px;
-    width: 100vw;
-    height: 40vh;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
 }
 
-.goals-form{
-    border: 2px solid green;
+.goals-outside-box{
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.goals-outside-box .heading-columns-box{
+    border: 3px solid #360018;
+    background-color: #1f0025ef;
+    border-radius: 30px;
     display: flex;
     margin:10px;
-    width: 100%;
+    height: 70%;
+    width: 70%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: rgb(212, 210, 210);
+    font-family: 'Inter', sans-serif;
 }
 
-.goals-form .heading-box{
-    border: 2px solid yellow;
+.goals-outside-box .heading-columns-box .heading-box{
+    border: 3px solid #360018;
+    background-color: #1d000d;
+    border-radius: 30px;
     display: flex;
     padding: 1px;
     padding-left: 20%;
     padding-right: 20%;
     margin-bottom: 20px;
     margin-top: 10px;
+    height: 8%;
+    justify-content: center;
+    align-items: center;
 }
-.goals-form .columns-box{
-    border: 2px solid hotpink;
+.goals-outside-box .columns-box{
+    background-color: #1d000d;
     width: 95%;
     height: 80%;
     margin-bottom: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    border-radius: 10px;
 }
-.goals-button-box{
-    border: 1px solid darkturquoise;
-    height: 10%;
-    text-align: center;
-    display: flex;
-    align-items: center;
-}
-.goals-column-box{
-    border: 1px solid blue;
+
+.goals-outside-box .goal{
+    background-color: #1d000d;
     height: 90%;
     width: 33%;
     margin: 10px;
     word-wrap: break-word;
-
 }
-.goals-column-heading-box{
-    border: 1px solid darkgoldenrod;
+
+.goals-outside-box .heading-box h2{
+    font-weight: 500;
+}
+
+.goals-outside-box .goal-heading-box{
+    background-color: #140009;
+    border: 3px solid #360018;
+    border-radius: 10px;
     height: 10%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: underline;
 }
-button{
-    color: black;
+
+.goals-outside-box .goal-item-box{
+    background-color: #140009;
+    border: 3px solid #360018;
+    border-radius: 10px;
+    height: 98%;   
 }
-.goals-item-box{
-    border: 1px solid darkmagenta;
-    height: 90%;
+
+.goals-outside-box .goal-button-box{
+    border: 3px solid #360018;
+    background-color: #1d000d;
+    height: 7%;
+    text-align: center;
+    width: 10%;
+    border-radius: 12px;
+}
+
+.goals-outside-box .goal-button-box button{
+    color: rgb(212, 210, 210);
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 1px solid transparent;
+    font-weight: 500;
+    font-size: 15px;
 }
 
 /* input box form */
 
-.input-background-form{
-    background-color: rgba(0, 255, 255, 0.281);
+.goal-input-background-form{
+    border-radius: 30px;
+    background-color: #1f00259f;
     display: flex;
-    height: 40vh;
-    width: 100vw;
+    margin:10px;
+    height: 70%;
+    width: 70%;
     position: absolute;
-    top:0px;
-    left: 0px;
-    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     display: none;
+    color: rgb(212, 210, 210);
+   
 }
-.input-form{
-    border: 1px solid red;
+
+.goal-input-background-form .input-form{
+    border-radius: 30px;
+    background-color: #1d000d;
+    border: 1px solid #30002c;
     width: 50%;
     height: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
 }
-.heading-box{
-    border: 1px solid yellow;
+.goal-input-background-form .heading-box{
+    background-color: #140009;
+    border: 2px solid #360018;
+    border-radius: 10px;
+    width: 40%;
     margin: 10px;
 }
-.input-box{
-    border: 1px solid green;
+.goal-input-background-form .input-box{
+    background-color: #140009;
+    border: 1px solid #360018;
+    border-radius: 10px;
+    width: 40%;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.button-box{
-    border: 1px solid hotpink;
-    padding: 10px;
+
+.goal-input-background-form .input-button-box{
+    border: 3px solid #360018;
+    background-color: #1d000d;
+    height: 10%;
+    width: 10%;
+    border-radius: 12px;
+    margin: 10px;
+    padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.button-box button{
-    color:black
+
+.goal-input-background-form .input-button-box button{
+    color: rgb(212, 210, 210);
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 1px solid transparent;
+    font-weight: 500;
+    font-size: 13px;
 }
-.input-form input{
-    color: black;
+
+.goal-input-background-form .input-form input{
+    color: rgb(212, 210, 210);
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 1px solid transparent;
 }
-.goal-selector-box{
-    border: 1px solid deeppink;
+
+.goal-input-background-form .goal-selector-box{
+    border-radius: 30px;
+    background-color: #1d000d;
+    border: 1px solid #30002c;
+    margin: 10px;
     height: 20%;
     width: 60%;
     display: flex;
@@ -119,15 +202,20 @@ button{
     flex-direction: column;
     display: none;
 }
-.goal-selector-heading-box{
-    border: 1px solid gold;
+
+.goal-input-background-form .goal-selector-heading-box{
+    background-color: #140009;
+    border: 3px solid #360018;
+    border-radius: 10px;
     height: 30%;
     width: 50%;
     text-align: center;
 }
 
-.goal-selector-button-box-form{
-    border: 1px solid red;
+.goal-input-background-form .goal-selector-button-box-form{
+    background-color: #140009;
+    border: 1px solid #360018;
+    border-radius: 10px;
     width: 90%;
     height: 50%;
     text-align: center;
@@ -136,8 +224,29 @@ button{
     align-items: center;
     
 }
-.goal-selector-button-box-form button{
-    color: black;
+
+.goal-input-background-form .goal-selector-button-box-form .button-box{
+    
     width: 13%;
     margin: 4px;
+    height: 50%;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid #360018;
+    background-color: #1d000d;
+    border-radius: 10px;
+    padding: 1px;
+
+}
+
+.goal-input-background-form .goal-selector-button-box-form .button-box button{
+    color: rgb(212, 210, 210);
+    width: 13%;
+    margin: 4px;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 1px solid transparent;
 }
