--- a/Planner/calisma-ekrani/css/to-do.css
+++ b/Planner/calisma-ekrani/css/to-do.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid yellow;
 }
 
 .to-do-heading-column-box{
