--- a/Planner/ana-ekran/css/ders-programi.css
+++ b/Planner/ana-ekran/css/ders-programi.css
@@ -188,7 +188,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    display: none;
 }
 .input-background-form .day-selector-heading-box{
     background-color: #140009;
@@ -271,4 +270,12 @@ ul li span:hover{
     color: #edeef0;
     border-radius: 25%;
     height: 17px;
+}
+
+#selected-date{
+    background-color: transparent;
+    border: none;
+    color: white;
+    max-height: 60px;
+    text-align: center;
 }
