--- a/Planner/giris-ekrani/css/giriscss.css
+++ b/Planner/giris-ekrani/css/giriscss.css
@@ -124,7 +124,7 @@ body{
 .register-login-screen .register-screen .label-input-box{
     padding-bottom: 30px;
 }
-.register-login-screen .register-screen p {
+.register-login-screen .register-screen .heading > p {
     text-align: center;
     font-size: 80px;
     padding-bottom:50px;
@@ -171,7 +171,7 @@ body{
     border-radius: 30px;
     display: none;
 }
-.register-login-screen .login-screen p {
+.register-login-screen .login-screen  p {
     text-align: center;
     font-size: 80px;
     padding-bottom:50px;
@@ -210,8 +210,40 @@ body{
     height: 40px;
     width: 150px;
     border-radius: 20px;
-}.register-login-screen .login-screen button:hover{
+}
+.register-login-screen .login-screen button:hover{
     background-color: white;
     color: #1a0020;
     transition: all .5s;
+}
+
+.outside-kayit-basarili-p{
+    border: solid red;
+    width: 100px;
+    height: 40px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.kayit-basarili-p{
+    margin-top: 10px;
+    margin-bottom: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1a0020;
+    width: 100%;
+    height: 30px;
+    border-radius: 3px;
+    border: rgb(63, 63, 63);
+    display: none;
+}
+
+.kayit-basarili-p p{
+    text-align: center;
+    color: green;
+    text-decoration: underline;
+    
 }
